fixing spacing and refactoring code

--- a/app/assets/stylesheets/pages/show.scss
+++ b/app/assets/stylesheets/pages/show.scss
@@ -1,4 +1,3 @@
-
 .info-container {
   width: 50%;
   padding: 0px 25px;
@@ -7,6 +6,7 @@
   justify-content: space-between;
   max-height: 500px;
 }
+
 .img-container {
   height: 500px;
   width: 50%;
@@ -33,7 +33,6 @@
 .product-container {
   display: flex;
   padding: 50px 0px;
-
 }
 
 .description-container {
@@ -56,6 +55,8 @@
 .description-container::-webkit-scrollbar-thumb {
   background-color:$red;
 }
+
+
 //------------------------------------------------------
 .nav-tabs .nav-link.active {
   color: #da4302;
@@ -78,13 +79,13 @@
 //---------------------------------------------------
 .color-vendor {
   color: #da4302;
-
 }
 
 .price-container h5 {
   font-weight: bold;
 
 }
+
 .vendor-info h6 {
   overflow: scroll;
   overflow-x: hidden;
@@ -104,14 +105,11 @@
   background-color:$red;
 }
 
-
-
 .vendor-info {
   height: 180px;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-
 }
 
 .producer-img-container img {
@@ -134,8 +132,8 @@
   margin-bottom: 0px
 }
 
-
 //-----------------------------------------------------
+
 .add-to-cart{
   width: 100%;
   margin-top: 50px;
@@ -157,7 +155,6 @@
   justify-content: space-between;
   margin-top: 20px;
 }
-
 
 .number-input input[type=number]::-webkit-inner-spin-button,
 .number-input input[type=number]::-webkit-outer-spin-button {
@@ -200,10 +197,12 @@ color: $red;
 border: none;
 background-color: #4d4d4d;
 }
+
 #order_item_quantity {
   color:$red;
   width: 45px;
 }
+
 #order_item_quantity::-webkit-outer-spin-button,
 #order_item_quantity::-webkit-inner-spin-button {
   -webkit-appearance: none;
@@ -219,14 +218,11 @@ background-color: #4d4d4d;
 
 //----------------------------------------------REVIEW IN SHOW PAGE
 .card-review-show {
-display: flex;
+  display: flex;
 }
 
-#review-collapsible{
+#background-review, #review-collapsible {
   background-color: #F9FCFB;
-}
-#background-review{
-background-color: #F9FCFB;
 }
 
 .content-field{
@@ -236,20 +232,23 @@ background-color: #F9FCFB;
 .new-review-wrapper {
   gap: 15px;
 }
+
 .color-btn-review {
- background-color: #da4302;
- color:white;
- border-radius: 10px;
+  background-color: #da4302;
+  color:white;
+  border-radius: 10px;
 }
+
 .collapsible-button{
   padding-top: 15px;
 }
+
 .date-review{
   font-size: 10px;
 }
+
 .product-header {
   font-size: 30px;
   line-height: 30px;
   max-width: 350px;
-
 }
